crates/common/tedge_config_engine/macro/tests/compile_fail/group_attribute_rejected.rs
//! Groups accept no `tedge_config` attributes

tedge_config_engine_macro::define_config! {
    Test {
        #[tedge_config(multi)]
        c8y: {
            /// Cloud URL
            url: String,
        },
    }
}

fn main() {}
