crates/common/tedge_config_engine/macro/tests/compile_fail/group_attribute_rejected.stderr
error: Unknown field: `multi`
 --> tests/compile_fail/group_attribute_rejected.rs:5:24
  |
5 |         #[tedge_config(multi)]
  |                        ^^^^^
